# pdf-bookmarker

./: .dockerignore  .gitignore  README.md  pyproject.toml  render.yaml
backend/: Dockerfile
backend/app/: jobs.py  main.py  ratelimit.py  routes.py
docs/superpowers/plans/: 2026-06-10-pdf-bookmarker.md  2026-06-11-web-app.md  2026-06-17-ocr-scanned-pdfs.md  2026-06-17-server-decided-verification-model.md
docs/superpowers/specs/: 2026-06-10-pdf-bookmarker-design.md  2026-06-11-web-app-design.md  2026-06-17-ocr-scanned-pdfs-design.md  2026-06-17-server-decided-verification-model-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css
pdf_bookmarker/: __init__.py  cli.py  extractor.py  heading_detector.py  llm.py  locator.py  models.py  ocr.py  pipeline.py  toc_detector.py  writer.py
tests/: conftest.py  test_cli.py  test_dataset.py  test_extractor.py  test_fetch_nist.py  test_finetune.py  test_fixtures.py  test_harvest.py  test_heading_detector.py  test_llm.py  test_locator.py  test_models.py  test_ocr.py  test_pipeline.py  test_predict.py  test_toc_detector.py  test_webapp_api.py  test_webapp_jobs.py  test_webapp_ratelimit.py  test_writer.py
training/: README.md  REMOTE.md  build_dataset.py  distill.py  evaluate.py  export_gguf.py  fetch_arxiv.py  fetch_nist.py  finetune.py  harvest.py  predict.py  requirements.txt
