[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-bookmarker"
version = "0.1.0"
description = "Add hierarchical bookmarks to text-based PDFs"
requires-python = ">=3.12"
dependencies = ["pymupdf>=1.24", "anthropic>=0.40", "pydantic>=2.7"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
pdf-bookmarker = "pdf_bookmarker.cli:main"

[tool.setuptools.packages.find]
include = ["pdf_bookmarker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
