[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-bookmarker"
version = "0.1.0"
description = "Add hierarchical bookmarks to text-based PDFs"
requires-python = ">=3.12"
dependencies = ["pymupdf>=1.24", "anthropic>=0.40", "pydantic>=2.7"]

[project.optional-dependencies]
gemini = ["google-genai>=1.0"]
web = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "python-multipart>=0.0.9"]
dev = [
    "pytest>=8",
    "google-genai>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.scripts]
pdf-bookmarker = "pdf_bookmarker.cli:main"

[tool.setuptools.packages.find]
include = ["pdf_bookmarker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
